SCX-10: Final wording changes for v1.2.0.

--- a/default/data/ui/views/3cx_overview.xml
+++ b/default/data/ui/views/3cx_overview.xml
@@ -1,6 +1,6 @@
 <form>
   <label>Overview</label>
-  <description>Includes statistics both Queue and Non-Queue Calls</description>
+  <description>Includes statistics for both queue and non-queue calls</description>
   <fieldset submitButton="false"></fieldset>
   <row>
     <panel>
