--- a/default/data/ui/views/3cx_queue_logins.xml
+++ b/default/data/ui/views/3cx_queue_logins.xml
@@ -1,4 +1,4 @@
-<form>
+<form version=1.1>
   <label>Agent Logins</label>
   <description>View statistics and summaries for Agent login sessions</description>
   <fieldset submitButton="false">
