--- a/default/data/ui/views/3cx_overview.xml
+++ b/default/data/ui/views/3cx_overview.xml
@@ -1,4 +1,4 @@
-<form version=1.1>
+<form version="1.1">
   <label>Overview</label>
   <description>Includes statistics for both queue and non-queue calls</description>
   <fieldset submitButton="false"></fieldset>
