--- a/default/data/ui/views/3cx_queue_extensions.xml
+++ b/default/data/ui/views/3cx_queue_extensions.xml
@@ -1,4 +1,4 @@
-<form stylesheet="table_highlight.css" script="table_highlight.js" version=1.1>
+<form stylesheet="table_highlight.css" script="table_highlight.js" version="1.1">
   <label>Queue Extensions</label>
   <fieldset submitButton="false">
     <input type="multiselect" token="hosts3" searchWhenChanged="true">
