--- a/default/data/ui/views/3cx_queue_overview.xml
+++ b/default/data/ui/views/3cx_queue_overview.xml
@@ -1,4 +1,4 @@
-<form version=1.1>
+<form version="1.1">
   <label>Queue Summary</label>
   <description>View general queue statistics over a period of time.</description>
   <fieldset submitButton="false">
